# split-video-with-subs

./: README.md  move-to-c-drive.sh  pyproject.toml
split_video_with_subs/: split_video_with_subs.py
tests/input/: superman_1941_512kb.srt
tests/output/: superman_1941_512kb_part_1.srt  superman_1941_512kb_part_2.srt
